--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DISCORD_TOKEN=
-MONGO_TOKEN=
-GIPHY_TOKEN=
-WEBHOOK_ID=
-WEBHOOK_TOKEN=
+DISCORD_TOKEN=MTE1MzAzMTM5NzE1ODY4NjgzMQ.GrpYW9.MFUmWK6waLZrgmohBiG4rVEhNCUDkmTuOtyzVY
+MONGO_TOKEN=mongodb+srv://b12nsj:99c61q@cluster0.wequneh.mongodb.net/?retryWrites=true&w=majority
+GIPHY_TOKEN=xsBNwSedRrwrwn1ZyjVRta93i00yhpiJ
+WEBHOOK_ID=1153031397158686831
+WEBHOOK_TOKEN=https://discord.com/api/webhooks/1256756483606183936/GaOHc5m7o66D5W-C6zsCMiW2IHKD9Zr-Y2Zl1erEZ_e1vQh9cIn73PcZwIjV38qR5dxq
 DISCORD_ID=
 
 # Not neccessary variables
